kinda works, there are some fixes to apply, but no need to waste time on this further

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="case">
-        <div class="screen">12345</div>
+        <div class="screen">
+            <div class="topScreen"></div>
+            <div class="bottomScreen"></div>
+        </div>
         <div class="buttons">
             <div class="row1">
                 <button class="seven">7</button>
